# LK-Lateral

./: LICENSE  metadata.json  package-lock.json  package.json  release.ps1
.github/workflows/: build_and_deploy.yml  deploy.yml
docs/: guide.md
scripts/: sync-version.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  localization.rs  main.rs  process.rs  registry.rs  version.rs
src/lib/: AboutTab.svelte  HomeTab.svelte  SettingsTab.svelte  i18n.ts
src/routes/: +page.svelte
